force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <pluralLabel>Expenses</pluralLabel>
    <description
  >The Expense object records employee expense claims submitted for reimbursement. It captures Expense Date (required), Amount (required), Category (Travel, Meals, Accommodation, Supplies, Other), Status, and the related Account. Amounts must be positive. Commonly used for expense approval workflows, budget tracking, and client rebilling.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Expense Number</label>
        <type>AutoNumber</type>
        <displayFormat>EXP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <validationRules>
        <fullName>Amount_Must_Be_Positive</fullName>
        <active>true</active>
        <description
    >An expense claim must carry a strictly positive amount.</description>
        <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The amount must be greater than zero.</errorMessage>
    </validationRules>
</CustomObject>