force-app/main/default/objects/Expense__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <description
  >Client account the expense should be rebilled to. Left empty for internal expenses.</description>
    <inlineHelpText
  >Select the client account only when the expense is rebillable to that client.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>