force-app/main/default/objects/Expense__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <description
  >Gross amount claimed by the employee, used to compute reimbursement totals and to enforce the approval threshold.</description>
    <inlineHelpText
  >Enter the total paid, taxes included, in the currency of the receipt.</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>