force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description
  >Expense nature, used to route the claim to the right budget line and to report spend by type.</description>
    <inlineHelpText
  >Pick the category that matches the receipt. Use Other only when nothing else fits.</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
                <default>true</default>
                <label>Travel</label>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>