force-app/main/default/objects/Expense__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <description
  >Free-text justification from the employee, and the reason recorded by the approver when a claim is rejected.</description>
    <inlineHelpText
  >Explain the business purpose of the expense, including who attended if it was a meal.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>