force-app/main/default/objects/Expense__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <label>Expense Date</label>
    <description
  >Date the expense was incurred, used to attach the claim to the correct accounting period.</description>
    <inlineHelpText
  >Enter the date shown on the receipt, not the date you submit the claim.</inlineHelpText>
    <type>Date</type>
    <required>true</required>
</CustomField>