force-app/main/default/objects/Expense__c/fields/Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>Reimbursable__c</fullName>
    <label>Reimbursable</label>
    <description
  >Marks the claim as payable back to the employee. Unchecked when the expense was paid with a company card.</description>
    <inlineHelpText
  >Leave unchecked if the expense was paid with a company card rather than your own money.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>